hacky fix for index grid spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -68,9 +68,17 @@
 }
 
 .home-about {
-  grid-template-rows: 15% 42.5%;
+  grid-template-rows: auto;
   grid-template-columns: 20% 1fr;
   grid-column-gap: 3rem;
+  grid-row-gap: 2rem;
+}
+
+.container {
+  max-width: $max-container-width;
+  margin: 2rem auto 4rem auto;
+  display: grid;
+  align-items: center;
 }
 
 .container-title {
